# ErosionControl

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  USAGE.md  launch_gui.pyw  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  fetch-bidtabsdata.yml
ec_train_output/: 2025-12-25_ec-train.xlsx  bidtabs_subset_2024-02-15.csv  ec_train_sessions.jsonl
examples/: custom_rules.yaml  highway_project.yaml  residential_project.json  rural_widening.yaml  urban_resurfacing.yaml  wetland_crossing.yaml
indot_resources/: idm_ec.txt  manifest.yaml  std_drawings_es2.txt  std_drawings_es5.txt  std_drawings_esc1.txt  std_drawings_trm.txt  stdspecs_205.txt  stdspecs_621.txt  stormwater_manual.txt
rules/indot/: jurisdiction.yaml  pay_item_mapping.yaml  practice_rules.yaml
scripts/: __init__.py  bootstrap.ps1  fetch_bidtabsdata.py  run_ec_train_cloud.py  run_ec_train_cloud.sh  run_tests.py
src/ec_agent/: __init__.py  citations.py  cli.py  desktop_app.py  indexer.py  io_utils.py  llm_adapter.py  loader.py  models.py  pay_items.py  report.py  retriever.py  rules_engine.py  schemas.py  web_app.py
src/ec_train/: __init__.py  __main__.py  bidtabs.py  cli.py  config.py  erms.py  excel_writer.py  extractor.py  session.py
src/ec_train/data/: bidtabs_cloud_sample.csv
tests/: test_bidtabs.py  test_ec_train_integration.py  test_erms.py  test_excel_writer.py  test_fetch_bidtabsdata.py  test_integration.py  test_llm_adapter.py  test_models.py  test_report.py  test_rules_engine.py
