[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ec-agent"
version = "0.1.0"
description = "EC Agent for roadway engineers - erosion control practices and pay items calculator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Derek Betz", email = "derek@example.com"}
]
keywords = ["erosion-control", "civil-engineering", "roadway"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",  # For better CLI output
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
ec-agent = "ec_agent.cli:app"
ec-train = "ec_train.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ec_agent --cov-report=term-missing --cov-report=html"
